--- a/index.html
+++ b/index.html
@@ -314,6 +314,18 @@
     <li> <a href="/src/tag13_DOM_II/Bonus_DOM_II/index.html">Bonus DOM II</a></li>
   </ul>
 
+  <h1>Functions II</h1>
+  <ul>
+    <li> <a
+        href="/src/tag14_Functions_II/Functions-TS-Grundlagen-Level-1_2/index.html">Functions-TS-Grundlagen-Level-1_2</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag14_Functions_II/Functions-TS-Level-1_6/index.html">Functions-TS-Level-1_6</a></li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag14_Functions_II/Functions-TS-Level-3_1/index.html">Functions-TS-Level-3_1</a></li>
+  </ul>
 
 
   <div id="app"></div>
