--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
     <li> <a href="/src/tag15_Module_und_Namensräume/Module-Namensräume-TS-3_1/index.html">Module-Namensräume-TS-3_1</a>
     </li>
   </ul>
+  <h1>Project-TS Panini Sammlerkarten</h1>
+  <ul>
+    <li> <a href="/src/Project-TS_Panini_Sammlerkarten/index.html">Project-TS Panini Sammlerkarten</a>
+    </li>
+  </ul>
+
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
