--- a/src/Project-TS_Panini_Sammlerkarten/index.html
+++ b/src/Project-TS_Panini_Sammlerkarten/index.html
@@ -27,10 +27,14 @@
         <input type="url" id="imageUrl-input" placeholder="Bild-URL" required />
         <textarea id="quote-input" placeholder="A famous quote by this person" required></textarea>
         <button type="submit" id="add-button">Add</button>
+
+
     </form>
 
-    <div class="cards-container" id="cards-container">
-
+    <div class="cards-container" id="cards-container"></div>
+    <div id="btn">
+        <button id="save-button">Save All Cards</button>
+        <button id="load-button">Load Cards</button>
     </div>
 </body>
 
