--- a/index.html
+++ b/index.html
@@ -345,6 +345,28 @@
     <li> <a href="/src/Project-TS_Panini_Sammlerkarten/index.html">Project-TS Panini Sammlerkarten</a>
     </li>
   </ul>
+  <h1>Enum</h1>
+  <ul>
+    <li> <a href="/src/tag17_ENUM/Enum-TS-Level-1_1/index.html">Enum TS Level 1_1</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag17_ENUM/Enum-TS-Level-1_2/index.html">Enum TS Level 1_2</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag17_ENUM/Enum-TS-Level-2_1/index.html">Enum TS Level 2_1</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag17_ENUM/Enum-TS-Level-2_2/index.html">Enum TS Level 2_2</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag17_ENUM/Enum-TS-Level-3_2/index.html">Enum TS Level 3_2</a>
+    </li>
+  </ul>
+
 
   <div id="app"></div>
 
