--- a/src/tag17_ENUM/Enum-TS-Level-2_2/index.html
+++ b/src/tag17_ENUM/Enum-TS-Level-2_2/index.html
@@ -4,12 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/src/tag17_ENUM/Enum-TS-Level-2_2/main.ts"></script>
+    <script defer src="/src/tag17_ENUM/Enum-TS-Level-2_2/main.ts"></script>
     <title>Enum-TS-Level-1_1</title>
 </head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #464646;
+    }
+
+    .color-container {
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    button {
+        width: 100px;
+        height: 60px;
+        border: none;
+        cursor: pointer;
+        transition: transform 0.8s ease;
+    }
+
+    button:hover {
+        transform: scale(1.2);
+    }
+</style>
 
 <body>
-
+    <div id="color-container" class="color-container"></div>
 </body>
 
 </html>
