--- a/src/tag12_DOM/DOM-TS-Level-1_2/index.html
+++ b/src/tag12_DOM/DOM-TS-Level-1_2/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/src/tag12_DOM/DOM-TS-Level-1_2/main.ts" defer ></script>
-    <title>Dom-Elements-TS-Level-1_1</title>
+    <script src="/src/tag12_DOM/DOM-TS-Level-1_2/main.ts" defer></script>
+    <title>Dom-Elements-TS-Level-1_2</title>
 </head>
+
 <body>
-    
+    <div id="info"></div>
+    <div id="container"></div>
 </body>
+
 </html>
