--- a/src/tag12_DOM/Dom-Elements-TS-Level-2_3/index.html
+++ b/src/tag12_DOM/Dom-Elements-TS-Level-2_3/index.html
@@ -14,24 +14,23 @@
         padding: 0;
         display: flex;
         justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f5f5f5;
+        background-color: #555555;
     }
 
     header {
         background-color: #333;
         padding: 10px;
-        border-radius: 8px;
         display: flex;
         gap: 10px;
+        width: 100%;
     }
 
     .nav-button {
+        font-size: 1em;
         background-color: #666;
         color: white;
         border: none;
-        padding: 10px 20px;
+        padding: 10px 70px;
         border-radius: 5px;
         cursor: pointer;
         transition: background-color 0.3s;
@@ -43,6 +42,7 @@
 
     #change-button {
         background-color: #4CAF50;
+        margin-left: auto;
     }
 </style>
 
