--- a/index.html
+++ b/index.html
@@ -385,6 +385,11 @@
     </li>
   </ul>
 
+  <ul>
+    <li> <a href="/src/tag18_BOM/Bom-TS-Level-3_2/index.html">BOM-TS-Level-3_2</a>
+    </li>
+  </ul>
+
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
