--- a/src/Project-TS Movies for you/index.html
+++ b/src/Project-TS Movies for you/index.html
@@ -10,37 +10,55 @@
 <style>
     body {
         font-family: Arial, sans-serif;
+        background-color: rgb(229, 229, 229);
+        background: linear-gradient(90deg, #ff7eb3, #75f4ff, #7eff82);
+        background-size: 300% 300%;
+        animation: gradientShift 5s infinite;
     }
 
-    #controls {
-        margin-bottom: 20px;
+    @keyframes gradientShift {
+        0% {
+            background-position: 0% 50%;
+        }
+
+        50% {
+            background-position: 100% 50%;
+        }
+
+        100% {
+            background-position: 0% 50%;
+        }
     }
+
 
     .movie {
         border: 1px solid #ccc;
         padding: 10px;
         margin-bottom: 10px;
-        background-color: rgb(126, 255, 33);
+        background-color: rgb(209, 240, 164);
         border-radius: 10px;
-        height: 500px;
+        height: 400px;
         margin: 10%;
+        box-shadow: 20px;
+        box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.15);
     }
+
+
 
     #movie-container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
 
-    }
+        margin: 0 auto;
+        /* Центрирование контейнера */
+        max-width: 1200px;
+        /* Максимальная ширина контейнера */
+        padding: 20px;
+        /* Отступы внутри контейнера */
 
-    #controls {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        gap: 20px;
     }
 
     h1,
@@ -49,46 +67,63 @@
         text-align: center;
     }
 
+    #controls {
+        display: flex;
+        /* Включаем flexbox */
+        flex-direction: column;
+        /* Располагаем элементы вертикально */
+        justify-content: center;
+        /* Центрируем по вертикали */
+        align-items: center;
+        /* Центрируем по горизонтали */
+        width: 100%;
+        gap: 20px;
+        /* Расстояние между блоками */
+    }
+
+    .btn-input {
+        display: flex;
+        /* Горизонтальное расположение input и кнопки */
+        align-items: center;
+        /* Выравнивание по вертикали */
+        gap: 10px;
+        /* Расстояние между input и кнопкой */
+        width: auto;
+        outline: none;
+
+    }
+
     #search-input {
-        width: 400px;
+        width: 280px;
+        /* Ширина поля ввода */
         border-radius: 2rem;
         font-size: 18px;
-        padding: 5px 10px;
+        padding: 5px 30px;
+        box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.15);
     }
 
     #search {
-        background-color: sandybrown;
-        color: white;
+        background-color: rgb(145, 244, 96);
+        color: rgb(0, 0, 0);
         border-radius: 2rem;
-        padding: 8px 10px;
+        padding: 5px 20px;
+        width: 200px;
+        /* Устанавливаем ширину кнопки */
+        font-size: 18px;
+        box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.15);
     }
 
     #search:hover {
         cursor: pointer;
-        background-color: springgreen;
+        background-color: rgb(72, 255, 0);
         color: black;
     }
 
     .btn {
         display: flex;
-        flex-direction: column;
-        /* Вертикальное выравнивание */
-        justify-content: center;
-        /* Центрирование по вертикали */
-        align-items: center;
-        /* Центрирование по горизонтали */
+        /* Горизонтальное расположение кнопок */
         gap: 10px;
         /* Расстояние между кнопками */
-        height: 30vh;
-        /* Высота для выравнивания на всей высоте окна */
-    }
-
-    #year-up:hover,
-    #year-down:hover,
-    #best-rate:hover {
-        cursor: pointer;
-        background-color: blue;
-        color: rgb(255, 255, 255);
     }
 
     #year-up,
@@ -98,22 +133,36 @@
         color: rgb(0, 0, 0);
         border-radius: 2rem;
         padding: 5px 10px;
-        /* Размеры кнопок */
-        width: 200px;
-        /* Ширина кнопок */
+        width: 180px;
+        /* Устанавливаем одинаковую ширину для всех кнопок */
         text-align: center;
         font-size: 16px;
         cursor: pointer;
+        box-shadow: 0px 20px 15px rgba(0, 0, 0, 0.15);
+        /* Тень для кнопок */
+    }
+
+    #year-up:hover,
+    #year-down:hover,
+    #best-rate:hover {
+        cursor: pointer;
+        background-color: rgb(72, 255, 0);
+        color: rgb(255, 255, 255);
+
     }
 </style>
 
 
 <body>
-    <h1>Movies for you</h1>
+    <h1>MOVIES FOR YOU!</h1>
     <p>The best MovieDB</p>
     <div id="controls">
-        <input id="search-input" type="text" placeholder="Search movies..." />
-        <button id="search">SEARCH</button>
+        <div class="btn-input">
+            <input id="search-input" type="text" placeholder="Search movies..." />
+            <button id="search">SEARCH</button>
+        </div>
+
+
         <div class="btn">
             <button id="year-up">YEAR UP</button>
             <button id="year-down">YEAR DOWN</button>
