--- a/index.html
+++ b/index.html
@@ -397,6 +397,20 @@
     </li>
   </ul>
 
+  <h1>API I</h1>
+  <ul>
+    <li> <a href="/src/tag19_API_I/fetch-level-1_1/index.html">fetch-level-1_1</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag19_API_I/fetch-level-1_2/index.html">fetch-level-1_2</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag19_API_I/fetch-level-2_1/index.html">fetch-level-2_1</a>
+    </li>
+  </ul>
+
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
