--- a/index.html
+++ b/index.html
@@ -411,6 +411,16 @@
     </li>
   </ul>
 
+  <h1>API II</h1>
+  <ul>
+    <li> <a href="/src/tag20_API_II/fetch-level-2_2/index.html">fetch-level-2_2</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag20_API_II/fetch-level-3_1/index.html">fetch-level-3_1</a>
+    </li>
+  </ul>
+
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
