--- a/index.html
+++ b/index.html
@@ -421,6 +421,17 @@
     </li>
   </ul>
 
+  <h1>Async Away</h1>
+
+  <ul>
+    <li> <a href="/src/tag20_Async Await/Async-TS-Level-1_1/index.html">Async-TS-Level-1_1</a>
+    </li>
+  </ul>
+  <ul>
+    <li> <a href="/src/tag20_Async Await/Async-TS-Level-1_2/index.html">Async-TS-Level-1_2</a>
+    </li>
+  </ul>
+
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
