--- a/index.html
+++ b/index.html
@@ -421,6 +421,12 @@
     </li>
   </ul>
 
+  <h1>BONUS Promises</h1>
+  <ul>
+    <li> <a href="/src/BONUS: Promises/index.html">Bonus Promises</a>
+    </li>
+  </ul>
+
   <h1>Async Away</h1>
 
   <ul>
