--- a/index.html
+++ b/index.html
@@ -427,6 +427,12 @@
     </li>
   </ul>
 
+  <h1>Bonus Morsecode</h1>
+  <ul>
+    <li> <a href="/src/Project-TS Morsecode/index.html">Bonus Morsecode</a>
+    </li>
+  </ul>
+
   <h1>Async Away</h1>
 
   <ul>
