--- a/index.html
+++ b/index.html
@@ -421,6 +421,11 @@
     </li>
   </ul>
 
+  <ul>
+    <li> <a href="/src/tag21_API_III/fetch-level-3_1/index.html">fetch-level-3_1 + Extra API</a>
+    </li>
+  </ul>
+
   <h1>BONUS Promises</h1>
   <ul>
     <li> <a href="/src/BONUS: Promises/index.html">Bonus Promises</a>
