--- a/src/Project-TS Galgenmännchen/index.html
+++ b/src/Project-TS Galgenmännchen/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Galgenmännchen</h1>
-        <div id="wordDisplay"></div>
+        <div id="wordDisplay"></div>ƒ
         <div id="letters"></div>
         <div>
             <label>
