--- a/src/tag21_API_III/fetch-level-3_1/index.html
+++ b/src/tag21_API_III/fetch-level-3_1/index.html
@@ -13,10 +13,10 @@
     <div class="search-input">
         <input type="text" placeholder="Search Character..." id="search">
     </div>
-    <h1>The Rick and Morty</h1>
+    <h1>* The Rick and Morty *</h1>
     <div id="character-container-rick"></div>
 
-    <h1>Pokemon</h1>
+    <h1>* Pokemon *</h1>
     <div id="character-container-pokemon"></div>
 </body>
 
