--- a/index.html
+++ b/index.html
@@ -455,6 +455,11 @@
     </li>
   </ul>
 
+  <h1>FakeStore API</h1>
+  <ul>
+    <li> <a href="/src/tag22_FakeStore_API/index.html">FakeStore API</a>
+    </li>
+  </ul>
   <div id="app"></div>
 
   <script type="module" src="/src/main.ts"></script>
